# static-analyzer

./: CMakeLists.txt  CRC32.cpp  CRC32.h  EditorialDistanceCompare.cpp  EditorialDistanceCompare.h  StaticAnalyzerUI.cpp  WShingling.cpp  WShingling.h  ast.cpp  ast.h  bor.cpp  bor.h  dictionary.cpp  dictionary.h  lexer.cpp  lexer.h  main.cpp
